include/rthw.h

/*
 * Exception interfaces
 */
void rt_hw_exception_install(rt_err_t (*exception_handle)(void *context));
struct rt_spinlock
{
    rt_hw_spinlock_t lock;
};
typedef rt_base_t rt_spinlock_t;
struct rt_spinlock
{
    rt_spinlock_t lock;
};