include/rtdef.h

typedef unsigned long                   rt_ubase_t;     /**< Nbit unsigned CPU related data type */
typedef uint8_t                         rt_uint8_t;     /**<  8bit unsigned integer type */
typedef uint16_t                        rt_uint16_t;    /**< 16bit unsigned integer type */
typedef uint32_t                        rt_uint32_t;    /**< 32bit unsigned integer type */
typedef uint64_t                        rt_uint64_t;    /**< 64bit unsigned integer type */
typedef unsigned char                   rt_uint8_t;     /**<  8bit unsigned integer type */
typedef unsigned short                  rt_uint16_t;    /**< 16bit unsigned integer type */
typedef unsigned int                    rt_uint32_t;    /**< 32bit unsigned integer type */
typedef unsigned long                   rt_uint64_t;    /**< 64bit unsigned integer type */
typedef unsigned long long              rt_uint64_t;    /**< 64bit unsigned integer type */
typedef size_t                          rt_size_t;      /**< Type for size number */
typedef rt_ubase_t                      rt_size_t;      /**< Type for size number */
typedef rt_uint32_t                     rt_tick_t;      /**< Type for tick count */
/**
 * Double List structure
 */
struct rt_list_node
{
    struct rt_list_node *next;                          /**< point to next node. */
    struct rt_list_node *prev;                          /**< point to prev node. */
};
typedef struct rt_list_node rt_list_t;                  /**< Type for lists. */
/**
 * Base structure of Kernel object
 */
struct rt_object
{
#if RT_NAME_MAX > 0
    char        name[RT_NAME_MAX];                       /**< dynamic name of kernel object */
#else
    const char *name;                                    /**< static name of kernel object */
#endif /* RT_NAME_MAX > 0 */
    rt_uint8_t  type;                                    /**< type of kernel object */
    rt_uint8_t  flag;                                    /**< flag of kernel object */

#ifdef RT_USING_MODULE
    void      * module_id;                               /**< id of application module */
#endif /* RT_USING_MODULE */

#ifdef RT_USING_SMART
    int         lwp_ref_count;                           /**< ref count for lwp */
#endif /* RT_USING_SMART */

    rt_list_t   list;                                    /**< list node of kernel object */
};
typedef struct rt_object *rt_object_t;                   /**< Type for kernel objects. */
/**
 * timer structure
 */
struct rt_timer
{
    struct rt_object parent;                            /**< inherit from rt_object */

    rt_list_t        row[RT_TIMER_SKIP_LIST_LEVEL];

    void (*timeout_func)(void *parameter);              /**< timeout function */
    void            *parameter;                         /**< timeout function's parameter */

    rt_tick_t        init_tick;                         /**< timer timeout tick */
    rt_tick_t        timeout_tick;                      /**< timeout tick */
};
typedef unsigned long rt_sigset_t;
typedef void (*rt_sighandler_t)(int signo);
struct rt_thread;
struct rt_wakeup
{
    rt_wakeup_func_t func;
    void *user_data;
};
typedef void (*lwp_sighandler_t)(int);
struct lwp_thread_signal {
    lwp_sigset_t sigset_mask;
    struct lwp_sigqueue sig_queue;
};
struct rt_user_context
{
    void *sp;
    void *pc;
    void *flag;

    void *ctx;
};
typedef void (*rt_thread_cleanup_t)(struct rt_thread *tid);
/**
 * Thread structure
 */
struct rt_thread
{
    struct rt_object            parent;
    rt_list_t                   tlist;                  /**< the thread list */

    /* stack point and entry */
    void                        *sp;                    /**< stack point */
    void                        *entry;                 /**< entry */
    void                        *parameter;             /**< parameter */
    rt_thread_cleanup_t         cleanup;                /**< cleanup function when thread exit */
    void                        *stack_addr;            /**< stack address */
    rt_uint32_t                 stack_size;             /**< stack size */

    rt_uint16_t                  stat;                   /**< thread status */

    /* priority */
    rt_uint8_t                  current_priority;       /**< current priority */
    rt_uint8_t                  init_priority;          /**< initialized priority */
#if RT_THREAD_PRIORITY_MAX > 32
    rt_uint8_t                  number;
    rt_uint8_t                  high_mask;
#endif /* RT_THREAD_PRIORITY_MAX > 32 */
    rt_uint32_t                 number_mask;            /**< priority number mask */

    rt_tick_t                   init_tick;              /**< thread's initialized tick */
    rt_tick_t                   remaining_tick;         /**< remaining tick */

    struct rt_timer             thread_timer;           /**< built-in thread timer */

    /* error code */
    rt_err_t                    error;                  /**< error code */  

#ifdef RT_USING_SMP
    rt_uint8_t                  bind_cpu;               /**< thread is bind to cpu */
    rt_uint8_t                  oncpu;                  /**< process on cpu */

    // rt_uint16_t                 scheduler_lock_nest;    /**< scheduler lock count */
    // rt_int16_t                  cpus_lock_nest;         /**< cpus lock count */
    rt_uint16_t                 critical_lock_nest;     /**< critical lock count */
#endif /*RT_USING_SMP*/

#ifdef RT_USING_MUTEX
    /* object for IPC */
    rt_list_t                   taken_object_list;
    rt_object_t                 pending_object;
#endif

#ifdef RT_USING_EVENT
    /* thread event */
    rt_uint32_t                 event_set;
    rt_uint8_t                  event_info;
#endif /* RT_USING_EVENT */

#ifdef RT_USING_SIGNALS
    rt_sigset_t                 sig_pending;            /**< the pending signals */
    rt_sigset_t                 sig_mask;               /**< the mask bits of signal */

#ifndef RT_USING_SMP
    void                        *sig_ret;               /**< the return stack pointer from signal */
#endif /* RT_USING_SMP */
    rt_sighandler_t             *sig_vectors;           /**< vectors of signal handler */
    void                        *si_list;               /**< the signal infor list */
#endif /* RT_USING_SIGNALS */

#ifdef RT_USING_CPU_USAGE
    rt_uint64_t                 duration_tick;          /**< cpu usage tick */
#endif /* RT_USING_CPU_USAGE */

#ifdef RT_USING_PTHREADS
    void                        *pthread_data;          /**< the handle of pthread data, adapt 32/64bit */
#endif /* RT_USING_PTHREADS */

    /* light weight process if present */
#ifdef RT_USING_SMART
    void                        *msg_ret;               /**< the return msg */

    void                        *lwp;                   /**< the lwp reference */
    /* for user create */
    void                        *user_entry;
    void                        *user_stack;
    rt_uint32_t                 user_stack_size;
    rt_uint32_t                 *kernel_sp;             /**< kernel stack point */
    rt_list_t                   sibling;                /**< next thread of same process */

    struct lwp_thread_signal    signal;                 /**< lwp signal for user-space thread */
    struct rt_user_context      user_ctx;               /**< user space context */
    struct rt_wakeup            wakeup;                 /**< wakeup data */
    int                         exit_request;
    int                         tid;

#ifndef ARCH_MM_MMU
    lwp_sighandler_t            signal_handler[32];
#else
    int                         step_exec;
    int                         debug_attach_req;
    int                         debug_ret_user;
    int                         debug_suspend;
    struct rt_hw_exp_stack      *regs;
    void                        *thread_idr;            /** lwp thread indicator */
    int                         *clear_child_tid;
#endif /* ARCH_MM_MMU */
#endif /* RT_USING_SMART */

    // rt_ubase_t                  user_data;              /**< private user data beyond this thread */
};
typedef struct rt_thread *rt_thread_t;
/**
 * Base structure of IPC object
 */
struct rt_ipc_object
{
    struct rt_object parent;                            /**< inherit from rt_object */

    rt_list_t        suspend_thread;                    /**< threads pended on this resource */
};
/**
 * Semaphore structure
 */
struct rt_semaphore
{
    struct rt_ipc_object parent;                        /**< inherit from ipc_object */

    rt_uint16_t          value;                         /**< value of semaphore. */
    rt_uint16_t          reserved;                      /**< reserved field */
};