rs_src/bindings.rs

#[test]
fn bindgen_test_layout_rt_stack() {
    const UNINIT: ::core::mem::MaybeUninit<rt_stack> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_stack>(),
        12usize,
        concat!("Size of: ", stringify!(rt_stack))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_stack>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_stack))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).sp) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_stack),
            "::",
            stringify!(sp)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).stack_addr) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_stack),
            "::",
            stringify!(stack_addr)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).size) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_stack),
            "::",
            stringify!(size)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct rt_thread {
    pub parent: rt_object,
    pub tlist: rt_list_t,
    pub stat: rt_uint8_t,
    pub sched_flag_ttmr_set: rt_uint8_t,
    pub current_priority: rt_uint8_t,
    pub init_priority: rt_uint8_t,
    pub number: rt_uint8_t,
    pub high_mask: rt_uint8_t,
    pub number_mask: rt_uint32_t,
    pub init_tick: rt_tick_t,
    pub remaining_tick: rt_tick_t,
    pub thread_timer: rt_timer,
    pub sp: rt_ubase_t,
    pub stack_addr: *mut rt_uint8_t,
    pub stack_size: rt_size_t,
    pub entry: *mut core::ffi::c_void,
    pub parameter: *mut core::ffi::c_void,
    pub cleanup: *mut core::ffi::c_void,
    pub bind_cpu: rt_uint8_t,
    pub oncpu: rt_uint8_t,
    pub spinlock: rt_spinlock,
    pub error: rt_err_t,
    pub taken_object_list: rt_list_t,
    pub pending_object: rt_object_t,
    pub event_set: rt_uint32_t,
    pub event_info: rt_uint8_t,
}
#[test]
fn bindgen_test_layout_rt_thread() {
    const UNINIT: ::core::mem::MaybeUninit<rt_thread> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_thread>(),
        148usize,
        concat!("Size of: ", stringify!(rt_thread))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_thread>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_thread))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).tlist) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(tlist)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).stat) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(stat)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).sched_flag_ttmr_set) as usize - ptr as usize },
        29usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(sched_flag_ttmr_set)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).current_priority) as usize - ptr as usize },
        30usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(current_priority)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).init_priority) as usize - ptr as usize },
        31usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(init_priority)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).number) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(number)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).high_mask) as usize - ptr as usize },
        33usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(high_mask)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).number_mask) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(number_mask)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).init_tick) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(init_tick)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).remaining_tick) as usize - ptr as usize },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(remaining_tick)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).thread_timer) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(thread_timer)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).sp) as usize - ptr as usize },
        92usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(sp)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).stack_addr) as usize - ptr as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(stack_addr)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).stack_size) as usize - ptr as usize },
        100usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(stack_size)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).entry) as usize - ptr as usize },
        104usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(entry)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parameter) as usize - ptr as usize },
        108usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(parameter)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).cleanup) as usize - ptr as usize },
        112usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(cleanup)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).bind_cpu) as usize - ptr as usize },
        116usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(bind_cpu)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).oncpu) as usize - ptr as usize },
        117usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(oncpu)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).spinlock) as usize - ptr as usize },
        120usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(spinlock)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).error) as usize - ptr as usize },
        124usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(error)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).taken_object_list) as usize - ptr as usize },
        128usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(taken_object_list)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).pending_object) as usize - ptr as usize },
        136usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(pending_object)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).event_set) as usize - ptr as usize },
        140usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(event_set)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).event_info) as usize - ptr as usize },
        144usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(event_info)
        )
    );
}
pub type rt_thread_t = *mut rt_thread;
#[doc = " Base structure of IPC object"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_ipc_object {
    #[doc = "< inherit from rt_object"]
    pub parent: rt_object,
    #[doc = "< threads pended on this resource"]
    pub suspend_thread: rt_list_t,
}
#[test]
fn bindgen_test_layout_rt_ipc_object() {
    const UNINIT: ::core::mem::MaybeUninit<rt_ipc_object> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_ipc_object>(),
        28usize,
        concat!("Size of: ", stringify!(rt_ipc_object))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_ipc_object>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_ipc_object))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_ipc_object),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).suspend_thread) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_ipc_object),
            "::",
            stringify!(suspend_thread)
        )
    );
}
#[doc = " Semaphore structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_semaphore {
    #[doc = "< inherit from ipc_object"]
    pub parent: rt_ipc_object,
    #[doc = "< value of semaphore."]
    pub value: rt_uint16_t,
    #[doc = "< reserved field"]
    pub reserved: rt_uint16_t,
}
